--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
   <h1>About Eliphant</h1>
   <table>
     <tr>
-    <td><a href="Index.html">Home</a></td>
+    <td><a href="index.html">Home</a></td>
     <td><a href="Types.html">Types</a></td>
     <td><a href="About.html">About</a></td>
     <td><a href="Contact.html">Contact</a></td>
