--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
   <table>
     <tr>
     <td><a href="index.html">Home</a></td>
-    <td><a href="Types.html">Types</a></td>
+    <td><a href="types.html">Types</a></td>
     <td><a href="About.html">About</a></td>
     <td><a href="Contact.html">Contact</a></td>
     </tr>
